# Parallel_programming

./: .gitignore  CMakeLists.txt  Makefile  README.md  compare_preconditioners.sh  requirements.txt  strong_scaling.sh  structure.txt  weak_scaling.sh
.github/workflows/: ci-cd.yml
docs/: installation.md  results.md
examples/: heat_equation.c  poisson2d.c  read_matrix_file.c
scripts/: build.sh  generate_matrices.py  generate_test_data.sh  run_bench.sh  run_benchmarks.sh  run_tests.sh
src/: custom_matrix.c  main.c  matrix_utils.c  matrix_utils.h  solver.c  solver.h
tests/: performance_tests.sh  test_preconditioners.sh  test_runner.sh  test_solver.c
tests/test_matrices/: diagonal_well_conditioned.m  laplace2d_small.m  random_sparse.m
